--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/node": "20.10.4",
     "@types/react": "18.2.42",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
